--- a/wp-content/themes/medigreen-child/style.css
+++ b/wp-content/themes/medigreen-child/style.css
@@ -3468,3 +3468,29 @@ blockquote:before {
 	padding-top: 5px !important;
 	padding-bottom: 5px !important;
 }
+
+/* WPCR Rating Stars Shortcode */
+.rating-stars-wrapper {
+	display: flex;
+	align-items: center;
+	justify-content: end;
+	gap: 0 4px;
+	flex-wrap: wrap;
+	padding-top: 13px;
+}
+
+.rating-stars {
+	display: flex;
+	gap: 2px;
+}
+
+.rating-star {
+	width: 20px;
+	height: 20px;
+	display: inline-block;
+	background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23ddd'%3E%3Cpath d='M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z'/%3E%3C/svg%3E") center/contain no-repeat;
+}
+
+.rating-star.active {
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%231a3a5c'%3E%3Cpath d='M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z'/%3E%3C/svg%3E");
+}
