--- a/wp-content/themes/medigreen-child/style.css
+++ b/wp-content/themes/medigreen-child/style.css
@@ -230,7 +230,7 @@ body.btStickyHeaderOpen {
 }
 
 .btSecondaryMenuBar .port {
-	max-width: 1200px;
+	max-width: 1800px;
 	margin: 0 auto;
 	padding: 0 30px;
 }
@@ -238,15 +238,19 @@ body.btStickyHeaderOpen {
 .btSecondaryMenuBar .btSecondaryNav ul {
 	display: flex;
 	justify-content: center;
-	gap: 30px;
+	gap: 15px;
 	list-style: none;
 	margin: 0;
 	padding: 0;
 }
 
+.btSecondaryMenuBar .btSecondaryNav ul li {
+	margin: 0 !important;
+}
+
 .btSecondaryMenuBar .btSecondaryNav ul li a {
 	color: #fff;
-	font-size: 16px;
+	font-size: 14px;
 	font-weight: 600;
 	text-transform: uppercase;
 	text-decoration: none;
